// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenResponsesLanguageModel > doGenerate > basic generation > should extract usage correctly 1`] = `
{
  "inputTokens": {
    "cacheRead": 0,
    "cacheWrite": undefined,
    "noCache": 136,
    "total": 136,
  },
  "outputTokens": {
    "reasoning": 2456,
    "text": 1221,
    "total": 3677,
  },
  "raw": {
    "input_tokens": 136,
    "input_tokens_details": {
      "cached_tokens": 0,
    },
    "output_tokens": 3677,
    "output_tokens_details": {
      "reasoning_tokens": 2456,
    },
    "total_tokens": 3813,
  },
}
`;

exports[`OpenResponsesLanguageModel > doGenerate > basic generation > should produce correct content 1`] = `
[
  {
    "text": "reasoning content",
    "type": "reasoning",
  },
  {
    "text": "text content",
    "type": "text",
  },
]
`;

exports[`OpenResponsesLanguageModel > doGenerate > basic generation > should send correct request body 1`] = `
{
  "input": [
    {
      "content": [
        {
          "text": "Hello",
          "type": "input_text",
        },
      ],
      "role": "user",
      "type": "message",
    },
  ],
  "model": "gemma-7b-it",
}
`;

exports[`OpenResponsesLanguageModel > doGenerate > request parameters > should send correct request body 1`] = `
{
  "input": [
    {
      "content": [
        {
          "text": "Hello",
          "type": "input_text",
        },
      ],
      "role": "user",
      "type": "message",
    },
  ],
  "max_output_tokens": 100,
  "model": "gemma-7b-it",
  "temperature": 0.5,
}
`;
